Rewrite from the ground up using Gio menus and actions
This follows the model/view architecture used by our system indicators. Some of the major changes:

 - Since our only depency is Gio, the indicators will work with Gtk3, Gtk4, Lomiri, etc
 - The deprecated and dead GtkStatusIcon is finally gone
 - We have tooltips now
 - The zombie libdbusmenu project is no longer required, we can safely abandon it
 - Since tons of very old code are gone, we are now consistently GPL-3+
 - Due to path/name changes, right now we can run these new indicators alongside legacy appindicators
 - This new library is low-maintenance and easy to expand without deprecation fears
 - The door is now open for dropping the old libindicator object and using inditor-ng for everything

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,69 +1,53 @@
-set(HEADERS
-    app-indicator.h
-)
-
-set(SOURCES
-    app-indicator.c
-    app-indicator-enum-types.c
+set (
+    SOURCES
+    ayatana-appindicator.c
+    ayatana-appindicator-enum-types.c
     application-service-marshal.c
-    generate-id.c
-    gen-notification-item.xml.c
-    gen-notification-watcher.xml.c
 )
 
-if (FLAVOUR_GTK3)
-    set (ayatana_appindicator_gtkver "ayatana-appindicator3")
-    set (ayatana_appindicator_girver "AyatanaAppIndicator3")
-    set (gtk_girver "Gtk-3.0")
-elseif (FLAVOUR_GTK2)
-    set (ayatana_appindicator_gtkver "ayatana-appindicator")
-    set (ayatana_appindicator_girver "AyatanaAppIndicator")
-    set (gtk_girver "Gtk-2.0")
-endif()
+install (FILES "${CMAKE_CURRENT_SOURCE_DIR}/ayatana-appindicator.h" DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/libayatana-appindicator")
 
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/app-indicator.h" DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/lib${ayatana_appindicator_gtkver}-0.1/libayatana-appindicator")
+# ayatana-appindicator-2.0.pc
 
-# ayatana-appindicator{,3}-0.1.pc
+configure_file ("${CMAKE_CURRENT_SOURCE_DIR}/ayatana-appindicator-2.0.pc.in" "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-2.0.pc" @ONLY)
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-2.0.pc" DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig")
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${ayatana_appindicator_gtkver}-0.1.pc.in" "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_gtkver}-0.1.pc" @ONLY)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_gtkver}-0.1.pc" DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/pkgconfig")
-
-# app-indicator-enum-types.h
+# ayatana-appindicator-enum-types.h
 
 find_program(GLIB_MKENUMS glib-mkenums)
 
-add_custom_command(
-    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.h"
+add_custom_command (
+    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.h"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMAND
     ${GLIB_MKENUMS}
-    --template app-indicator-enum-types.h.in
-    ${HEADERS}
-    --output="${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.h"
+    --template ayatana-appindicator-enum-types.h.in
+    ayatana-appindicator.h
+    --output="${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.h"
 )
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.h" DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/lib${ayatana_appindicator_gtkver}-0.1/libayatana-appindicator")
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.h" DESTINATION "${CMAKE_INSTALL_FULL_INCLUDEDIR}/libayatana-appindicator")
 
-# app-indicator-enum-types.c
+# ayatana-appindicator-enum-types.c
 
-add_custom_command(
-    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.c"
-    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.h"
+add_custom_command (
+    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.c"
+    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.h"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMAND
     ${GLIB_MKENUMS}
-    --template app-indicator-enum-types.c.in
-    ${HEADERS}
-    --output="${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.c"
+    --template ayatana-appindicator-enum-types.c.in
+    ayatana-appindicator.h
+    --output="${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.c"
 )
 
-find_program(GLIB_GENMARSHAL glib-genmarshal)
+find_program (GLIB_GENMARSHAL glib-genmarshal)
 
 # application-service-marshal.h
 
-add_custom_command(
+add_custom_command (
     OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/application-service-marshal.h"
-    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/app-indicator-enum-types.c"
+    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/ayatana-appindicator-enum-types.c"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMAND
     ${GLIB_GENMARSHAL}
@@ -75,7 +59,7 @@ add_custom_command(
 
 # application-service-marshal.c
 
-add_custom_command(
+add_custom_command (
     OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/application-service-marshal.c"
     DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/application-service-marshal.h"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
@@ -88,86 +72,59 @@ add_custom_command(
     --output="${CMAKE_CURRENT_BINARY_DIR}/application-service-marshal.c"
 )
 
-# gen-notification-item.xml.h
+# libayatana-appindicator.so
 
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/gen-notification-item.xml.h" "extern const char * _notification_item;")
+add_library ("ayatana-appindicator" SHARED ${SOURCES})
+set_target_properties ("ayatana-appindicator" PROPERTIES VERSION 2.0.0 SOVERSION 2)
+target_compile_definitions ("ayatana-appindicator" PUBLIC G_LOG_DOMAIN="libayatana-appindicator" SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+target_include_directories ("ayatana-appindicator" PUBLIC ${DEPS_INCLUDE_DIRS})
+target_include_directories ("ayatana-appindicator" PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+target_include_directories ("ayatana-appindicator" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries ("ayatana-appindicator" ${DEPS_LIBRARIES})
+target_link_options ("ayatana-appindicator" PRIVATE "LINKER:--version-script=${CMAKE_CURRENT_SOURCE_DIR}/ayatana-appindicator.symbols")
+install (TARGETS "ayatana-appindicator" LIBRARY DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}")
 
-# gen-notification-item.xml.c
+# AyatanaAppIndicator-2.0.gir
 
-file(READ "${CMAKE_CURRENT_SOURCE_DIR}/notification-item.xml" GEN_NOTIFICATION_ITEM_XML_C)
-string(REPLACE "\"" "\\\"" GEN_NOTIFICATION_ITEM_XML_C ${GEN_NOTIFICATION_ITEM_XML_C})
-string(REPLACE "\n" "\\n\"\n\"" GEN_NOTIFICATION_ITEM_XML_C ${GEN_NOTIFICATION_ITEM_XML_C})
-string(REGEX REPLACE "\n\"$" "\n" GEN_NOTIFICATION_ITEM_XML_C ${GEN_NOTIFICATION_ITEM_XML_C})
-string(PREPEND GEN_NOTIFICATION_ITEM_XML_C "const char * _notification_item = \n\"")
-string(APPEND GEN_NOTIFICATION_ITEM_XML_C "\;")
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/gen-notification-item.xml.c" ${GEN_NOTIFICATION_ITEM_XML_C})
+find_package (GObjectIntrospection REQUIRED)
 
-# gen-notification-watcher.xml.h
-
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/gen-notification-watcher.xml.h" "extern const char * _notification_watcher;")
-
-# gen-notification-watcher.xml.c
-
-file(READ "${CMAKE_CURRENT_SOURCE_DIR}/notification-watcher.xml" GEN_NOTIFICATION_WATCHER_XML_C)
-string(REPLACE "\"" "\\\"" GEN_NOTIFICATION_WATCHER_XML_C ${GEN_NOTIFICATION_WATCHER_XML_C})
-string(REPLACE "\n" "\\n\"\n\"" GEN_NOTIFICATION_WATCHER_XML_C ${GEN_NOTIFICATION_WATCHER_XML_C})
-string(REGEX REPLACE "\n\"$" "\n" GEN_NOTIFICATION_WATCHER_XML_C ${GEN_NOTIFICATION_WATCHER_XML_C})
-string(PREPEND GEN_NOTIFICATION_WATCHER_XML_C "const char * _notification_watcher = \n\"")
-string(APPEND GEN_NOTIFICATION_WATCHER_XML_C "\;")
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/gen-notification-watcher.xml.c" ${GEN_NOTIFICATION_WATCHER_XML_C})
-
-# libayatana-appindicator{,3}.so
-
-add_library("${ayatana_appindicator_gtkver}" SHARED ${SOURCES})
-set_target_properties("${ayatana_appindicator_gtkver}" PROPERTIES VERSION 1.0.0 SOVERSION 1)
-target_compile_definitions("${ayatana_appindicator_gtkver}" PUBLIC G_LOG_DOMAIN="libayatana-appindicator")
-target_include_directories("${ayatana_appindicator_gtkver}" PUBLIC ${PROJECT_DEPS_INCLUDE_DIRS})
-target_include_directories("${ayatana_appindicator_gtkver}" PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
-target_include_directories("${ayatana_appindicator_gtkver}" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries("${ayatana_appindicator_gtkver}" ${PROJECT_DEPS_LIBRARIES})
-target_link_options ("${ayatana_appindicator_gtkver}" PRIVATE "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/app-indicator.symbols")
-install(TARGETS "${ayatana_appindicator_gtkver}" LIBRARY DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}")
-
-# AyatanaAppIndicator{,3}-0.1.gir
-
-find_package(GObjectIntrospection REQUIRED)
-
-add_custom_command(
-    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.gir"
-    DEPENDS "${ayatana_appindicator_gtkver}"
+add_custom_command (
+    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.gir"
+    DEPENDS "ayatana-appindicator"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     COMMAND
     ${INTROSPECTION_SCANNER}
-    app-indicator.c ${HEADERS}
+    ayatana-appindicator.c ayatana-appindicator.h
     --add-include-path=${CMAKE_CURRENT_BINARY_DIR}
-    --c-include=libayatana-appindicator/app-indicator.h
+    --c-include=libayatana-appindicator/ayatana-appindicator.h
     --symbol-prefix=app
     --identifier-prefix=App
-    --namespace=${ayatana_appindicator_girver}
-    --nsversion=0.1
+    --namespace=AyatanaAppIndicator
+    --nsversion=2.0
     --quiet
     --warn-all
+    --include=Gio-2.0
     --include=GObject-2.0
-    --include=${gtk_girver}
     --library-path=${CMAKE_CURRENT_BINARY_DIR}
-    --library="${ayatana_appindicator_gtkver}"
-    --output "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.gir"
+    --library="ayatana-appindicator"
+    --output "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.gir"
 )
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.gir" DESTINATION "${CMAKE_INSTALL_FULL_DATADIR}/gir-1.0")
 
-# AyatanaAppIndicator{,3}-0.1.typelib
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.gir" DESTINATION "${CMAKE_INSTALL_FULL_DATADIR}/gir-1.0")
 
-add_custom_command(
-    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.typelib"
-    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.gir"
+# AyatanaAppIndicator-2.0.typelib
+
+add_custom_command (
+    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.typelib"
+    DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.gir"
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     COMMAND
     ${INTROSPECTION_COMPILER}
     --includedir=${CMAKE_CURRENT_BINARY_DIR}
-    ${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.gir
-    -o "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.typelib"
+    ${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.gir
+    -o "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.typelib"
 )
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.typelib" DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/girepository-1.0")
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.typelib" DESTINATION "${CMAKE_INSTALL_FULL_LIBDIR}/girepository-1.0")
 
-add_custom_target(src ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/${ayatana_appindicator_girver}-0.1.typelib")
+add_custom_target ("src" ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/AyatanaAppIndicator-2.0.typelib")
